[package]
name = "markdown_translator"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
comrak = "0.27.0"
aws-config = "1.5.5"
aws-sdk-translate = "1.39.0"
bpaf = "0.9.12"
bpaf_derive = "0.5.10"

tokio = { version = "1", features = ["full"] }

